--- a/xss/production/test/cameras.html
+++ b/xss/production/test/cameras.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="../js/three/Three.js"></script>
 <script type="text/javascript" src="../js/three/Stats.js"></script>
 <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
+<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
@@ -28,9 +29,6 @@ var SCREEN_WIDTH = window.innerWidth;
 var SCREEN_HEIGHT = window.innerHeight;
 var g_elapsed = -1;
 var g_delta = 0.0;			
-var threejs_models = 
-        [
-        ];
 var application = {};
 // --------RESOURCES---------
 // --------RESOURCES---------
@@ -57,25 +55,25 @@ set_active_camera(camera_2);
 }
 }
 	var material_sphere1 = new THREE.MeshLambertMaterial({
-	color:Math.random() * 0xffffff,shading:THREE.FlatShading
+	color:Math.random() * 0xffffff,shading:flat_shading
 	});
 	var material_sphere2 = new THREE.MeshLambertMaterial({
-	color:Math.random() * 0xffffff,shading:THREE.FlatShading
+	color:Math.random() * 0xffffff,shading:flat_shading
 	});
 	var material_wireframe = new THREE.MeshLambertMaterial({
-	color:16755400,wireframe:true,wireframeLinewidth:1
+	color:16755400,wireframe:true
 	});
 	var cylinder_material = new THREE.MeshLambertMaterial({
-	color:Math.random() * 0xffffff,shading:THREE.FlatShading
+	color:Math.random() * 0xffffff,shading:flat_shading
 	});
 	var cylinder1_material = new THREE.MeshLambertMaterial({
-	color:Math.random() * 0xffffff,shading:THREE.FlatShading
+	color:Math.random() * 0xffffff,shading:flat_shading
 	});
 	var cube_material = new THREE.MeshLambertMaterial({
-	color:Math.random() * 0xffffff,shading:THREE.FlatShading
+	color:Math.random() * 0xffffff,shading:flat_shading
 	});
 	var cube1_material = new THREE.MeshLambertMaterial({
-	color:Math.random() * 0xffffff,shading:THREE.FlatShading
+	color:Math.random() * 0xffffff,shading:flat_shading
 	});
 var scene = 
 new THREE.Scene(
@@ -191,31 +189,6 @@ animate();
 function animate() {
 	requestAnimationFrame( animate );
 	render();
-}
-function get_model(model_id)
-{
-		for(var i = 0; i < this.threejs_models.length; i++)
-		{
-			var model = this.threejs_models[i];
-			if (model.id == model_id)
-				return model.src;
-		}
-		return null;
-}
-function set_active_camera(camera)
-{
-	renderer.render(scene, camera);
-	soundRenderer.render(scene, camera);
-	active_camera = camera;
-}
-function get_intersects( x, y, object)
-{
-	var vector = new THREE.Vector3( ( x / window.innerWidth ) * 2 - 1, - ( y / window.innerHeight ) * 2 + 1, 0.5 );
-	projector = new THREE.Projector();
-	projector.unprojectVector( vector, active_camera );
-	var ray = new THREE.Ray( active_camera.position, vector.subSelf( active_camera.position ).normalize() );
-	var intersects = ray.intersectObject( object );
-	return intersects;
 }
 </script>
 </body>
