--- a/xss/production/test/cube.html
+++ b/xss/production/test/cube.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="../js/three/Three.js"></script>
 <script type="text/javascript" src="../js/three/Stats.js"></script>
 <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
+<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
@@ -27,9 +28,6 @@ var SCREEN_WIDTH = window.innerWidth;
 var SCREEN_HEIGHT = window.innerHeight;
 var g_elapsed = -1;
 var g_delta = 0.0;			
-var threejs_models = 
-        [
-        ];
 var application = {};
 // --------RESOURCES---------
 // --------RESOURCES---------
@@ -73,9 +71,6 @@ new Array(
 	var plane_material = new THREE.MeshBasicMaterial({
 	color:14737632
 	});
-var cube_faces = 
-new THREE.MeshFaceMaterial(
-);
 var scene = 
 new THREE.Scene(
 );
@@ -88,7 +83,7 @@ new THREE.Camera(
 new THREE.Cube(
 200,200,200,1,1,1,materials);
 	var cube_1 = new THREE.Mesh(cube_1_cube,
-	cube_faces);
+	new THREE.MeshFaceMaterial());
 	scene.addObject(cube_1);
                 cube_1.position.y = 150;
 	var plane_1_plane = 
@@ -149,31 +144,6 @@ animate();
 function animate() {
 	requestAnimationFrame( animate );
 	render();
-}
-function get_model(model_id)
-{
-		for(var i = 0; i < this.threejs_models.length; i++)
-		{
-			var model = this.threejs_models[i];
-			if (model.id == model_id)
-				return model.src;
-		}
-		return null;
-}
-function set_active_camera(camera)
-{
-	renderer.render(scene, camera);
-	soundRenderer.render(scene, camera);
-	active_camera = camera;
-}
-function get_intersects( x, y, object)
-{
-	var vector = new THREE.Vector3( ( x / window.innerWidth ) * 2 - 1, - ( y / window.innerHeight ) * 2 + 1, 0.5 );
-	projector = new THREE.Projector();
-	projector.unprojectVector( vector, active_camera );
-	var ray = new THREE.Ray( active_camera.position, vector.subSelf( active_camera.position ).normalize() );
-	var intersects = ray.intersectObject( object );
-	return intersects;
 }
 </script>
 </body>
