--- a/xss/production/test/3js1.html
+++ b/xss/production/test/3js1.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="../js/three/Three.js"></script>
 <script type="text/javascript" src="../js/three/Stats.js"></script>
 <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
+<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
@@ -27,9 +28,6 @@ var SCREEN_WIDTH = window.innerWidth;
 var SCREEN_HEIGHT = window.innerHeight;
 var g_elapsed = -1;
 var g_delta = 0.0;			
-var threejs_models = 
-        [
-        ];
 var application = {};
 // --------RESOURCES---------
 // --------RESOURCES---------
@@ -44,7 +42,7 @@ if (g_elapsed < 0)
 else
 g_delta  = now - g_elapsed;  
 g_elapsed = now; 
-		set_active_camera();
+		set_active_camera(camera_w_id_4);
 }
 	var cylinder_material = new THREE.MeshBasicMaterial({
 	color:Math.random() * 0xffffff
@@ -58,22 +56,22 @@ new THREE.MeshNormalMaterial(
 var scene = 
 new THREE.Scene(
 );
-var  = 
+var camera_w_id_4 = 
 new THREE.Camera(
 75,1.5,1,3000);
-                .position.z = 1000;
+                camera_w_id_4.position.z = 1000;
 var light = 
 new THREE.DirectionalLight(
-1677);
+);
 		;
 	scene.addLight(light);
                 light.position.y = 0.5;
                 light.position.z = 1;
 	var cylinder_1_cylinder = 
 new THREE.Cylinder(
-200,100,100,500);
+500);
 	var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder,
-	cylinder_material);
+	);
 	scene.addObject(cylinder_1);
                 cylinder_1.rotation.x = 10;
                 cylinder_1.rotation.y = 10;
@@ -82,7 +80,7 @@ new THREE.Cylinder(
 new THREE.Cube(
 300,300,300);
 	var cube_1 = new THREE.Mesh(cube_1_cube,
-	cube_material);
+	);
 	scene.addObject(cube_1);
                 cube_1.position.x = -600;
                 cube_1.position.y = -100;
@@ -90,9 +88,9 @@ new THREE.Cube(
                 cube_1.rotation.y = 10;
 	var sphere_1_sphere = 
 new THREE.Sphere(
-200,20,20);
+200);
 	var sphere_1 = new THREE.Mesh(sphere_1_sphere,
-	sphere_material);
+	);
 	scene.addObject(sphere_1);
                 sphere_1.position.x = -400;
                 sphere_1.position.y = 400;
@@ -111,31 +109,6 @@ animate();
 function animate() {
 	requestAnimationFrame( animate );
 	render();
-}
-function get_model(model_id)
-{
-		for(var i = 0; i < this.threejs_models.length; i++)
-		{
-			var model = this.threejs_models[i];
-			if (model.id == model_id)
-				return model.src;
-		}
-		return null;
-}
-function set_active_camera(camera)
-{
-	renderer.render(scene, camera);
-	soundRenderer.render(scene, camera);
-	active_camera = camera;
-}
-function get_intersects( x, y, object)
-{
-	var vector = new THREE.Vector3( ( x / window.innerWidth ) * 2 - 1, - ( y / window.innerHeight ) * 2 + 1, 0.5 );
-	projector = new THREE.Projector();
-	projector.unprojectVector( vector, active_camera );
-	var ray = new THREE.Ray( active_camera.position, vector.subSelf( active_camera.position ).normalize() );
-	var intersects = ray.intersectObject( object );
-	return intersects;
 }
 </script>
 </body>
