--- a/xss/production/test/cameras.html
+++ b/xss/production/test/cameras.html
@@ -55,31 +55,31 @@ set_active_camera(camera_2);
 }
 }
 	var material_sphere1 = new THREE.MeshLambertMaterial({
-	color:Math.random() * 0xffffff,shading:flat_shading
+	color:Math.random() * 0xffffff,shading:THREE.FlatShading
 	});
 	var material_sphere2 = new THREE.MeshLambertMaterial({
-	color:Math.random() * 0xffffff,shading:flat_shading
+	color:Math.random() * 0xffffff,shading:THREE.FlatShading
 	});
 	var material_wireframe = new THREE.MeshLambertMaterial({
-	color:16755400,wireframe:true
+	color:16755400,wireframe:true,wireframeLinewidth:1
 	});
 	var cylinder_material = new THREE.MeshLambertMaterial({
-	color:Math.random() * 0xffffff,shading:flat_shading
+	color:Math.random() * 0xffffff,shading:THREE.FlatShading
 	});
 	var cylinder1_material = new THREE.MeshLambertMaterial({
-	color:Math.random() * 0xffffff,shading:flat_shading
+	color:Math.random() * 0xffffff,shading:THREE.FlatShading
 	});
 	var cube_material = new THREE.MeshLambertMaterial({
-	color:Math.random() * 0xffffff,shading:flat_shading
+	color:Math.random() * 0xffffff,shading:THREE.FlatShading
 	});
 	var cube1_material = new THREE.MeshLambertMaterial({
-	color:Math.random() * 0xffffff,shading:flat_shading
+	color:Math.random() * 0xffffff,shading:THREE.FlatShading
 	});
 var scene = 
 new THREE.Scene(
 );
 	var camera_1 = new THREE.QuakeCamera({
-	fov:50,aspect:1.5,near:1,far:10000,movementSpeed:70,lookSpeed:0.0500000007,noFly:true,lookVertical:false
+	fov:50,aspect:1.5,near:1,far:10000,lookSpeed:0.0500000007,noFly:true
 	});
                 camera_1.position.x = -250;
                 camera_1.position.y = 25;
@@ -90,32 +90,32 @@ new THREE.Camera(
                 camera_2.position.y = 25;
 var light = 
 new THREE.DirectionalLight(
-16777215);
+);
 		;
 	scene.addLight(light);
                 light.position.y = 0.5;
                 light.position.z = 1;
 	var sphere_1_sphere = 
 new THREE.Sphere(
-20,32,16);
+20);
 	var sphere_1 = new THREE.Mesh(sphere_1_sphere,
-	material_sphere1);
+	);
 	scene.addObject(sphere_1);
                 sphere_1.position.x = 250;
                 sphere_1.position.y = 30;
 	var sphere_2_sphere = 
 new THREE.Sphere(
-20,32,16);
+20);
 	var sphere_2 = new THREE.Mesh(sphere_2_sphere,
-	material_sphere2);
+	);
 	scene.addObject(sphere_2);
                 sphere_2.position.x = -250;
                 sphere_2.position.y = 30;
 	var cylinder_1_cylinder = 
 new THREE.Cylinder(
-20,10,10,50);
+50);
 	var cylinder_1 = new THREE.Mesh(cylinder_1_cylinder,
-	cylinder_material);
+	);
 	scene.addObject(cylinder_1);
                 cylinder_1.rotation.x = 10;
                 cylinder_1.rotation.y = 10;
@@ -124,9 +124,9 @@ new THREE.Cylinder(
                 cylinder_1.position.z = 100;
 	var cylinder_2_cylinder = 
 new THREE.Cylinder(
-20,10,10,50);
+50);
 	var cylinder_2 = new THREE.Mesh(cylinder_2_cylinder,
-	cylinder1_material);
+	);
 	scene.addObject(cylinder_2);
                 cylinder_2.rotation.x = 10;
                 cylinder_2.rotation.y = 10;
@@ -137,7 +137,7 @@ new THREE.Cylinder(
 new THREE.Cube(
 30,30,30);
 	var cube_1 = new THREE.Mesh(cube_1_cube,
-	cube_material);
+	);
 	scene.addObject(cube_1);
                 cube_1.position.x = -100;
                 cube_1.position.y = 30;
@@ -148,7 +148,7 @@ new THREE.Cube(
 new THREE.Cube(
 30,30,30);
 	var cube_2 = new THREE.Mesh(cube_2_cube,
-	cube1_material);
+	);
 	scene.addObject(cube_2);
                 cube_2.position.x = 100;
                 cube_2.position.y = 30;
@@ -157,9 +157,9 @@ new THREE.Cube(
                 cube_2.rotation.y = 10;
 	var plane_1_plane = 
 new THREE.Plane(
-1000,1000,100,100);
+1000,1000);
 	var plane_1 = new THREE.Mesh(plane_1_plane,
-	material_wireframe);
+	);
 	scene.addObject(plane_1);
                 plane_1.position.y = 0.100000001;
                 plane_1.rotation.x = -1.57;
