--- a/xss/production/test/carousel.html
+++ b/xss/production/test/carousel.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="../js/three/Three.js"></script>
 <script type="text/javascript" src="../js/three/Stats.js"></script>
 <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
+<script type="text/javascript" src="../js/three/Utils.js"></script>
 <script type="text/javascript" src="../js/jquery-1.4.2.min.js" ></script>
 <script type="text/javascript" src="../js/jquery.utils.js"></script>
 <script type="text/javascript" src="../js/utils.js"></script>
@@ -27,9 +28,6 @@ var SCREEN_WIDTH = window.innerWidth;
 var SCREEN_HEIGHT = window.innerHeight;
 var g_elapsed = -1;
 var g_delta = 0.0;			
-var threejs_models = 
-        [
-        ];
 var application = {};
 // --------RESOURCES---------
 // --------RESOURCES---------
@@ -45,61 +43,61 @@ else
 g_delta  = now - g_elapsed;  
 g_elapsed = now; 
 		application.position_items();
-		set_active_camera();
+		set_active_camera(camera_w_id_12);
 }
 var materials = 
 new Array(
 );
 	materials.push(new THREE.MeshBasicMaterial({
-	map:THREE.ImageUtils.loadTexture(g_startup_package.get_resource('images/test1.png').src),
+	map:THREE.ImageUtils.loadTexture(g_streamer.get_resource('images/test1.png').asset),
 	}));
 	materials.push(new THREE.MeshBasicMaterial({
-	opacity:0.200000003,map:THREE.ImageUtils.loadTexture(g_startup_package.get_resource('images/test1.png').src),
+	map:THREE.ImageUtils.loadTexture(g_streamer.get_resource('images/test1.png').asset),
 	}));
 	materials.push(new THREE.MeshBasicMaterial({
-	map:THREE.ImageUtils.loadTexture(g_startup_package.get_resource('images/test2.png').src),
+	map:THREE.ImageUtils.loadTexture(g_streamer.get_resource('images/test2.png').asset),
 	}));
 	materials.push(new THREE.MeshBasicMaterial({
-	opacity:0.200000003,map:THREE.ImageUtils.loadTexture(g_startup_package.get_resource('images/test2.png').src),
+	map:THREE.ImageUtils.loadTexture(g_streamer.get_resource('images/test2.png').asset),
 	}));
 	materials.push(new THREE.MeshBasicMaterial({
-	map:THREE.ImageUtils.loadTexture(g_startup_package.get_resource('images/test3.png').src),
+	map:THREE.ImageUtils.loadTexture(g_streamer.get_resource('images/test3.png').asset),
 	}));
 	materials.push(new THREE.MeshBasicMaterial({
-	opacity:0.200000003,map:THREE.ImageUtils.loadTexture(g_startup_package.get_resource('images/test3.png').src),
+	map:THREE.ImageUtils.loadTexture(g_streamer.get_resource('images/test3.png').asset),
 	}));
 	materials.push(new THREE.MeshBasicMaterial({
-	map:THREE.ImageUtils.loadTexture(g_startup_package.get_resource('images/test4.png').src),
+	map:THREE.ImageUtils.loadTexture(g_streamer.get_resource('images/test4.png').asset),
 	}));
 	materials.push(new THREE.MeshBasicMaterial({
-	opacity:0.200000003,map:THREE.ImageUtils.loadTexture(g_startup_package.get_resource('images/test4.png').src),
+	map:THREE.ImageUtils.loadTexture(g_streamer.get_resource('images/test4.png').asset),
 	}));
 	materials.push(new THREE.MeshBasicMaterial({
-	map:THREE.ImageUtils.loadTexture(g_startup_package.get_resource('images/test5.png').src),
+	map:THREE.ImageUtils.loadTexture(g_streamer.get_resource('images/test5.png').asset),
 	}));
 	materials.push(new THREE.MeshBasicMaterial({
-	opacity:0.200000003,map:THREE.ImageUtils.loadTexture(g_startup_package.get_resource('images/test5.png').src),
+	map:THREE.ImageUtils.loadTexture(g_streamer.get_resource('images/test5.png').asset),
 	}));
 var scene = 
 new THREE.Scene(
 );
-var  = 
+var camera_w_id_12 = 
 new THREE.Camera(
 45,1.5,1,10000);
-                .position.x = 500;
-                .position.y = 500;
-                .position.z = 1000;
+                camera_w_id_12.position.x = 500;
+                camera_w_id_12.position.y = 500;
+                camera_w_id_12.position.z = 1000;
 	var img1_plane = 
 new THREE.Plane(
 128,164);
 	var img1 = new THREE.Mesh(img1_plane,
-	materials[0]);
+	);
 	scene.addObject(img1);
 	var img1_reflect_plane = 
 new THREE.Plane(
 128,164);
 	var img1_reflect = new THREE.Mesh(img1_reflect_plane,
-	materials[1]);
+	);
 	scene.addObject(img1_reflect);
                 img1_reflect.doubleSided = true;
                 img1_reflect.scale.y = 0.800000012;
@@ -109,13 +107,13 @@ new THREE.Plane(
 new THREE.Plane(
 128,164);
 	var img2 = new THREE.Mesh(img2_plane,
-	materials[2]);
+	);
 	scene.addObject(img2);
 	var img2_reflect_plane = 
 new THREE.Plane(
 128,164);
 	var img2_reflect = new THREE.Mesh(img2_reflect_plane,
-	materials[3]);
+	);
 	scene.addObject(img2_reflect);
                 img2_reflect.doubleSided = true;
                 img2_reflect.scale.y = 0.800000012;
@@ -125,13 +123,13 @@ new THREE.Plane(
 new THREE.Plane(
 128,164);
 	var img3 = new THREE.Mesh(img3_plane,
-	materials[4]);
+	);
 	scene.addObject(img3);
 	var img3_reflect_plane = 
 new THREE.Plane(
 128,164);
 	var img3_reflect = new THREE.Mesh(img3_reflect_plane,
-	materials[5]);
+	);
 	scene.addObject(img3_reflect);
                 img3_reflect.doubleSided = true;
                 img3_reflect.scale.y = 0.800000012;
@@ -141,13 +139,13 @@ new THREE.Plane(
 new THREE.Plane(
 128,164);
 	var img4 = new THREE.Mesh(img4_plane,
-	materials[6]);
+	);
 	scene.addObject(img4);
 	var img4_reflect_plane = 
 new THREE.Plane(
 128,164);
 	var img4_reflect = new THREE.Mesh(img4_reflect_plane,
-	materials[7]);
+	);
 	scene.addObject(img4_reflect);
                 img4_reflect.doubleSided = true;
                 img4_reflect.scale.y = 0.800000012;
@@ -157,13 +155,13 @@ new THREE.Plane(
 new THREE.Plane(
 128,164);
 	var img5 = new THREE.Mesh(img5_plane,
-	materials[8]);
+	);
 	scene.addObject(img5);
 	var img5_reflect_plane = 
 new THREE.Plane(
 128,164);
 	var img5_reflect = new THREE.Mesh(img5_reflect_plane,
-	materials[9]);
+	);
 	scene.addObject(img5_reflect);
                 img5_reflect.doubleSided = true;
                 img5_reflect.scale.y = 0.800000012;
@@ -200,31 +198,6 @@ animate();
 function animate() {
 	requestAnimationFrame( animate );
 	render();
-}
-function get_model(model_id)
-{
-		for(var i = 0; i < this.threejs_models.length; i++)
-		{
-			var model = this.threejs_models[i];
-			if (model.id == model_id)
-				return model.src;
-		}
-		return null;
-}
-function set_active_camera(camera)
-{
-	renderer.render(scene, camera);
-	soundRenderer.render(scene, camera);
-	active_camera = camera;
-}
-function get_intersects( x, y, object)
-{
-	var vector = new THREE.Vector3( ( x / window.innerWidth ) * 2 - 1, - ( y / window.innerHeight ) * 2 + 1, 0.5 );
-	projector = new THREE.Projector();
-	projector.unprojectVector( vector, active_camera );
-	var ray = new THREE.Ray( active_camera.position, vector.subSelf( active_camera.position ).normalize() );
-	var intersects = ray.intersectObject( object );
-	return intersects;
 }
 </script>
 </body>
